SigmaCodebackup3rdSep/objects/Service_Appointments__c.object
<CustomObject>
    <fields>
        <fullName>AssignTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Service_Date_Time__c</fullName>
        <label>Preferred Service Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Order_Status__c</fullName>
        <label>Work Order Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Appointments</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Service Appoitments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>